[gd_scene load_steps=3 format=3 uid="uid://38kharycq82j"]

[ext_resource type="Script" uid="uid://bibdsldcyiqyk" path="res://scenes/guns/generic_laser_gun.gd" id="1_50dsy"]
[ext_resource type="Texture2D" uid="uid://bkxcrpbmi4let" path="res://assets/sprites/generic_laser_gun.png" id="2_50dsy"]

[node name="GenericLaserGun" type="Node2D"]
script = ExtResource("1_50dsy")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_50dsy")
centered = false

[node name="ShootPoint" type="Marker2D" parent="."]
position = Vector2(38, 18)

[node name="CooldownTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="timeout" from="CooldownTimer" to="." method="_on_timer_timeout"]
